Fix (#20): Stop tables overflowing when screen is below a certain width.

--- a/css/admin.css
+++ b/css/admin.css
@@ -32,6 +32,7 @@ main>section#options>header, main>section#categories>header, main>section#delive
 
 section#categories, section#products, section#delivery-opts, section#product, section#settings { /* Focussed display sections */
     float: left;
+    margin-bottom: 1%;
     box-shadow: 0 3px 3px #888888;
     border: 1px solid #D6D6D6;
     width: 100%;
