--- a/css/reporting.css
+++ b/css/reporting.css
@@ -32,6 +32,7 @@ main>section#options>header, main>section#warnings>header, main>section#orders>h
 
 section#warnings, section#orders { /* Focussed display sections */
     float: left;
+    margin-bottom: 1%;
     box-shadow: 0 3px 3px #888888;
     border: 1px solid #D6D6D6;
     width: 100%;
